fixed text wrapping bug in articles

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -54,7 +54,7 @@ p {
     font-style: normal;
     font-variant: normal;
     font-weight: 300;
-    line-height: 15.4px;
+    line-height: 20px;
 }
 
 a {
@@ -146,15 +146,6 @@ button>a, button>a:hover {
 
 .btn {
     margin: 2px;
-}
-
-.article-info {
-    padding: 0px !important;
-}
-
-.article-body {
-    border-left: solid 1px;
-    border-radius: 0px !important;
 }
 
 .navbar-center {
